# Carenaija

./: .replit  package-lock.json  package.json  pyproject.toml  replit.md  threat_model.md
attached_assets/: Pasted-CREATE-200-REALISTIC-REVIEWS-distributed-across-hospita_1768102440951.txt  Pasted-Create-a-comprehensive-Health-Education-Hub-for-CareNai_1766291099829.txt  Pasted-Create-a-modern-mobile-responsive-login-page-for-CareNa_1766029799984.txt  Pasted-Final-polish-pass-on-CareNaija-Phase-1-and-2-are-done-n_1778467725338.txt  Pasted-I-already-have-a-Node-Express-SQLite-or-Prisma-project-_1765336548282.txt  Pasted-I-want-you-to-fix-foundational-issues-across-the-CareNa_1778464798169.txt  Pasted-Now-I-want-a-patient-focused-redesign-of-the-public-fac_1778466182391.txt  Pasted-Prompt-You-are-a-senior-full-stack-engineer-helping-me-_1765334851938.txt  content-1765767316241.md
client/: index.html
client/public/: manifest.json  robots.txt  sitemap.xml  sw.js
client/src/: App.tsx  index.css  main.tsx
scraper/: runner.py
scraper/data/: nigerian_locations.py
scraper/sources/: __init__.py  base.py  google_places.py  news_monitor.py  web_directory.py
scraper/utils/: __init__.py  cache.py  db.py  deduplication.py  rate_limiter.py  scoring.py
server/: auto-seed.ts  cache.ts  db.ts  index.ts  replitAuth.ts  routes.ts  scheduler.ts  security.ts  seed-diagnostic-physicians.ts  seed-more.ts  seed-nigeria.ts  seed-pharmacies.ts  seed.ts  static.ts  storage.ts
server/services/: email.ts  notification.ts
shared/: schema.ts
shared/models/: auth.ts
(+85 files in other folders)
