[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "aiohttp==3.13.3",
    "beautifulsoup4>=4.14.3",
    "fake-useragent>=2.2.0",
    "feedparser>=6.0.12",
    "lxml>=6.0.2",
    "trafilatura>=2.0.0",
    "pillow==12.1.1",
    "psycopg2-binary>=2.9.11",
    "python-dotenv>=1.2.1",
    "requests>=2.32.5",
    "tenacity>=9.1.2",
    "urllib3==2.6.3",
]
